--- a/index.html
+++ b/index.html
@@ -22,6 +22,12 @@
       </ul>
     </nav>
 
+    <div class="sectiontext">
+      <p>Hello</p>
+      <p>I'm Charles</p>
+      <p>A fullstack developer student at Moringa School.</p>
+    </div>
+
   </section>
   
 </body>
