--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <a href="#" class="logo">Charlie</a>
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About</a></li>
+        <li><a href="#">About Me</a></li>
         <li><a href="#">Contact</a></li>
       </ul>
     </nav>
@@ -25,7 +25,7 @@
     <div class="sectiontext">
       <p>Hello</p>
       <p>I'm Charles</p>
-      <p>A fullstack developer student at Moringa School.</p>
+      <p>A Fullstack Developer Student at <br> Moringa School.</p>
     </div>
 
   </section>
