--- a/index.html
+++ b/index.html
@@ -28,6 +28,8 @@
       <p>A Fullstack Developer Student at <br> Moringa School.</p>
     </div>
 
+    <img src="/images/dp.png" class="dp" alt="">
+
   </section>
   
 </body>
