--- a/index.html
+++ b/index.html
@@ -33,20 +33,25 @@
   </section>
 
   <div class="about">
-    <h2>About Me</h2>
-    <div class="abouttext">
-      <p>Hello, My name is Charles Karanja. I am currently a Fullstack developer student at Moringa, leaving in Kibera.</p>
+
+    <div>
+      <h1>About Me</h1>
     </div>
-    <div class="abouttext2">
-      <h2>Education</h2>
-      <p>Moringa School: 2021 - current</p>
-      <p>Elite Highschool: 2014 - 2017</p>
-      <p>Olympic Primary School: 2005 - 2012</p>
-    </div>
-    <div class="abouttext3">
-      <h2> Job Experience</h2>
-      <p>Genistat: January, 2020 - March, 2020</p>
-      <p>Samasource: 2018 - 2019</p>
+    <div class="aboutme">
+      <div class="abouttext">
+        <p>Hello, My name is Charles Karanja. I am currently a Fullstack developer student at Moringa, leaving in Kibera. My hobby is watching movies.</p>
+      </div>
+      <div class="abouttext2">
+        <h2>Education</h2>
+        <p>Moringa School: 2021 - current</p>
+        <p>Elite Highschool: 2014 - 2017</p>
+        <p>Olympic Primary School: 2005 - 2012</p>
+      </div>
+      <div class="abouttext3">
+        <h2> Job Experience</h2>
+        <p>Genistat: January, 2020 - March, 2020</p>
+        <p>Samasource: 2018 - 2019</p>
+      </div>
     </div>
 
   </div>
