add projects li

--- a/index.html
+++ b/index.html
@@ -55,6 +55,29 @@
     </div>
 
   </div>
+  <div class="projects">
+    <div class="heading">
+      <h1>My projects</h1>
+    </div>
+    <div class="projectlist">
+      <ul>
+        <div class="anita">
+          <li><a href="https://charliek254.github.io/Anitas-Kitchen/"><h2>Anita's Kitchen</h2></a></li>
+          <p>
+            This project was created to view a list of dishes available at Anita's Kitchen. <br>
+            This project uses languages like HTML and CSS.
+          </p>
+        </div>
+        <div class="band">
+          <li><a href="https://charliek254.github.io/First-website/"><h2>My Favourite Band</h2></a></li>
+          <p>
+            This project is about my favourite Band. It's comprised of a description of the band, list of songs and the members. <br>
+            This project uses languages like HTML and CSS.
+          </p>
+        </div>
+      </ul>
+    </div>
+  </div>
   
 </body>
 </html>
