--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Monoton&display=swap" rel="stylesheet">
+  <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
   <link rel="stylesheet" type="text/css" href="index.css">
   <title>portfolio</title>
 </head>
@@ -78,6 +79,15 @@
       </ul>
     </div>
   </div>
+  <footer>
+    <div class="footer-content">
+      <div class="contact">
+        <h3>Contact</h3>
+        <p>charles.kanyiri@student.moringaschool.com</p>
+        <p>+254796459716</p>
+      </div>
+    
+  </footer>
   
 </body>
 </html>
