--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
   <title>portfolio</title>
 </head>
 <body>
+
   <section>
 
     <nav>
@@ -32,7 +33,6 @@
     <img src="/images/dp.png" class="dp" alt="">
 
   </section>
-
   <div class="about">
 
     <div>
@@ -57,6 +57,7 @@
 
   </div>
   <div class="projects">
+
     <div class="heading">
       <h1>My projects</h1>
     </div>
@@ -78,15 +79,32 @@
         </div>
       </ul>
     </div>
+
   </div>
   <footer>
+
     <div class="footer-content">
       <div class="contact">
         <h3>Contact</h3>
         <p>charles.kanyiri@student.moringaschool.com</p>
         <p>+254796459716</p>
       </div>
-    
+      <div>
+        <p>
+          Feel free to contact me or connect with me through the socials &#128526 
+        </p>
+        <ul class="socials">
+          <li><a href="https://www.facebook.com/nicholas.nicknicky/"><i class="fa fa-facebook"></i></a></li>
+          <li><a href="https://twitter.com/NiccurNick"><i class="fa fa-twitter"></i></a></li>
+          <li><a href="https://myaccount.google.com/profile"><i class="fa fa-google-plus"></i></a></li>
+          <li><a href="https://www.linkedin.com/in/nicholas-okoth-7a589b156/"><i class="fa fa-linkedin-square"></i></a></li>
+        </ul>
+      </div>
+    </div>
+    <div class="footer-bottom">
+      <p>copyright &copy;2021 designed by <span>Charles Karanja</span></p>
+    </div>
+
   </footer>
   
 </body>
