add final touch

--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
       <a href="#" class="logo">Charlie</a>
       <ul>
         <li><a href="#" class="active">Home</a></li>
-        <li><a href="#">About Me</a></li>
-        <li><a href="#">Contact</a></li>
+        <li><a href="#about">About Me</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </nav>
 
@@ -36,7 +36,7 @@
   <div class="about">
 
     <div>
-      <h1>About Me</h1>
+      <h1><a name="about">About Me</a></h1>
     </div>
     <div class="aboutme">
       <div class="abouttext">
@@ -85,7 +85,7 @@
 
     <div class="footer-content">
       <div class="contact">
-        <h3>Contact</h3>
+        <h3><a name="contact"></a>Contact</a></h3>
         <p>charles.kanyiri@student.moringaschool.com</p>
         <p>+254796459716</p>
       </div>
