--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
       <p>A Fullstack Developer Student at <br> Moringa School.</p>
     </div>
 
-    <img src="/images/dp.png" class="dp" alt="">
+    <img src="./images/dp.png" class="dp" alt="">
 
   </section>
   <div class="about">
